Fixed aligning issues trendings

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ h4 {
 .trend-text p {
   font-size: 11px;
   color: #737373;
+  margin-top: 4px;
 }
 
 .divider {
@@ -209,7 +210,7 @@ h4 {
   align-items: center;
   margin: 0 20px;
   padding: 13px 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .trend-text {
